@@ -9,7 +9,7 @@
    <TITLE>libstdc++-v3 configure options</TITLE>
 <LINK REL="home" HREF="http://sources.redhat.com/libstdc++/">
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: configopts.html,v 1.12 2000/10/21 00:51:49 jsm28 Exp $ -->
+<!-- $Id: configopts.html,v 1.13 2000/10/21 19:43:13 bkoz Exp $ -->
 </HEAD>
 <BODY>
 
@@ -126,10 +126,18 @@ options</A></H1>
         2.90.8, 'single' and 'posix' are the only implemented models.
      </P>
 
- <DT><TT>--enable-version-specific-runtime-libs</TT>
- <DD><P>Uses the compiler file "gcc/version.c" to determine the compiler
-        version.
+ <DT><TT>--enable-version-specific-runtime-libs  </TT>
+ <DD><P>Specify that run-time libraries should be installed in the
+       compiler-specific subdirectory (i.e.,
+       <TT>$(libdir)/gcc-lib/$(target_alias)/$(gcc_version)</TT>)
+       instead of <TT>$(libdir)</TT>.  This option is useful if you
+       intend to use several versions of gcc in parallel.  In addition,
+       libstdc++'s include files will be installed in
+       <TT>$(libdir)/gcc-lib/$(target_alias)/$(gcc_version)/include/g++</TT>,
+       unless you also specify
+       <TT>--with-gxx-include-dir=_dirname_</TT> during configuration.
      </P>
+
 
  <DT><TT>--with-gxx-include-dir=&lt;include-files dir&gt;</TT>
  <DD><P>Adds support for named libstdc++ include directory.  For instance,
@@ -184,7 +192,7 @@ options</A></H1>
 
 <HR>
 <P CLASS="fineprint"><EM>
-$Id: configopts.html,v 1.12 2000/10/21 00:51:49 jsm28 Exp $
+$Id: configopts.html,v 1.13 2000/10/21 19:43:13 bkoz Exp $
 </EM></P>
 
 
