@@ -1,3 +1,9 @@
+2000-10-24   Mark Harig <mharig@landmark.com>
+
+        * docs/configopts.html: Added documentation for the
+        "--enable-version-specific-runtime-libs" and
+        "--with-gxx-include-dir" configuration switches.
+
 2000-10-24  Benjamin Kosnik  <bkoz@redhat.com>
 
         * include/bits/stl_pair.h (make_pair): Add LWG solution.
